@@ -34,7 +34,7 @@ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 //
 //  Module: MailMsg.h
 //
-//    Desc: This class encapsulates the MAPI and CMC mail functions.
+//    Desc: This class encapsulates the MAPI mail functions.
 //
 // Copyright (c) 2003 Michael Carruth
 //
@@ -46,27 +46,6 @@ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "stdafx.h"
 
 typedef std::map<std::string, std::string> TStrStrMap;
-
-//
-// Define CMC entry points
-//
-typedef CMC_return_code (FAR PASCAL *LPCMCLOGON) \
-(CMC_string, CMC_string, CMC_string, CMC_object_identifier, \
- CMC_ui_id, CMC_uint16, CMC_flags, CMC_session_id FAR*, \
- CMC_extension FAR*);
-
-typedef CMC_return_code (FAR PASCAL *LPCMCSEND) \
-(CMC_session_id, CMC_message FAR*, CMC_flags, \
- CMC_ui_id, CMC_extension FAR*);
-
-typedef CMC_return_code (FAR PASCAL *LPCMCLOGOFF) \
-(CMC_session_id, CMC_ui_id, CMC_flags, CMC_extension FAR*);
-
-typedef CMC_return_code (FAR PASCAL *LPCMCQUERY) \
-(CMC_session_id, CMC_enum, CMC_buffer, CMC_extension FAR*);
-
-
-////////////////////////////// Class Definitions /////////////////////////////
 
 // ===========================================================================
 // CMailMsg
@@ -94,8 +73,6 @@ public:
     static BOOL DetectMailClient(CString& sMailClientName);
     CString GetEmailClientName();
     BOOL Send();
-    BOOL MAPISend();   
-    BOOL CMCSend();
     CString GetLastErrorMsg(){ return m_sErrorMsg; }
 
 protected:
@@ -107,10 +84,6 @@ protected:
     std::string    m_sMessage;                   // EMail message
 
     HMODULE        m_hMapi;                      // Handle to MAPI32.DLL
-    LPCMCQUERY     m_lpCmcQueryConfiguration;    // Cmc func pointer
-    LPCMCLOGON     m_lpCmcLogon;                 // Cmc func pointer
-    LPCMCSEND      m_lpCmcSend;                  // Cmc func pointer
-    LPCMCLOGOFF    m_lpCmcLogoff;                // Cmc func pointer
     LPMAPILOGON    m_lpMapiLogon;                // Mapi func pointer
     LPMAPISENDMAIL m_lpMapiSendMail;             // Mapi func pointer
     LPMAPILOGOFF   m_lpMapiLogoff;               // Mapi func pointer
