@@ -28,6 +28,7 @@
 - Fixed: A single .pch file is used by Release and Debug configs causing compiler errors (issue 147)
 - Fixed: SigIntHandler installed by CR_INST_SIGILL_HANDLER (issue 154)
 - Fixed: ASSERTION failure when CrThreadAutoInstallHelper fails to install handler (issue 148).
+- Fixed: Deprecated CMC functions cause Visual studio 2012 rc compile error (issue 156)
 
 --- Ver. 1.3.0 ---
 
